Adjusted spacing issue for new game button

--- a/public/styles.css
+++ b/public/styles.css
@@ -6,6 +6,11 @@ h1 {
   font-family: 'Lobster', cursive;
 }
 
+h4 {
+  display: block;
+  margin-bottom: 10px;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
 }
@@ -18,6 +23,7 @@ body {
 #board_container {
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
   flex-wrap: wrap;
 }
@@ -40,6 +46,11 @@ body {
 
 .spacer {
   margin-top: 20px;
+}
+
+#newGame {
+  display: block;
+  margin-top: 10px;
 }
 
 /* CSS styling for Hexagon adapted from https://jtauber.github.io/articles/css-hexagon.html */
